# slotmap

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  TODO.md
doc/: conf.py  documentation.rst  index.rst  slotmap.rst  stack.rst
src/: slotmap.c  slotmap.h  stack.c  stack.h
tests/: CMakeLists.txt  test_slotmap.c  test_stack.c
